# fishregression

./: pyproject.toml
